# rust-http-server

./: Cargo.toml  LICENSE  README.adoc
src/: errors.rs  filesystem.rs  log_util.rs  main.rs  server.rs
src/cgi/: mod.rs  parser.rs
src/config/: mod.rs  parser.rs
src/fastcgi/: driver.rs  mod.rs  parser.rs  serializer.rs
src/server/: mod.rs  router.rs  static_files.rs
