[package]
name = "http-server"
version = "0.2.0"
authors = ["Alex Hill <alexander.d.hill.89@gmail.com>"]

[dependencies]
byteorder = "0.5.1"
clap = "2.1.2"
httparse = "1.1.1"
mime_guess = "1.6.0"
mime = "0.2.0"
nom = "1.2.2"
log = "0.3.5"
env_logger = "0.3.2"

[dependencies.toml]
version = "0.1.28"
default_features = false
